--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
         "handlebars": "^4.0.10",
         "js-beautify": "^1.6.14"
     },
-    "main": "to-polymer2.js",
+    "main": "src/to-polymer2.js",
     "repository": {
         "type": "git",
         "url": "https://github.com/beeva-arturomartinezdiaz/to-polymer2"
     },
     "bugs": {
         "url": "https://github.com/beeva-arturomartinezdiaz/to-polymer2/issues"
+    },
+    "bin": {
+        "to-polymer2": "./bin/to-polymer2-module.js"
     }
 }
